# certificategeneration

./: New.csv  accounts.db  database.py  manage.py  requirements.txt  run.bat  run.txt
client/src/: App.js  api.js  index.js
client/src/components/: Dashboard.js  Login.js  Register.js
customer/: forms.py  models.py  urls.py  views.py
customer/templates/: dashboard.html  hire_maids.html  login.html  register.html
login_system/: asgi.py  settings.py  urls.py  wsgi.py
maids/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
maids/templates/: dashboard.html  login.html  register.html
server/: server.js
server/config/: db.js
server/models/: Users.js
server/routes/: authRoutes.js
shantabai/: accounts.db  manage.py
shantabai/accounts/: admin.py  forms.py  models.py  urls.py  views.py
shantabai/accounts/templates/: dashboard.html  login.html  register.html
shantabai/shantabai_login/: settings.py  urls.py  wsgi.py
shantabai_login/: asgi.py  settings.py  urls.py  wsgi.py
shantabaiweb/shantabaiweb/: asgi.py
shantabaiweb/templates/: homepage.html
src/: CMakeLists.txt  example.cpp  example.py
users/: forms.py  models.py  urls.py  views.py
users/templates/users/: home.html  login.html  register.html
